# homeworks

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.playwright  diesel.toml  docker-compose.yaml
.github/workflows/: docker.yml
frontend/: .gitignore  components.d.ts  env.d.ts  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  typed-router.d.ts
frontend/e2e/: subjects.spec.ts
frontend/src/: App.vue  api.ts  dayjs.ts  utils.ts
frontend/src/components/: ColorIndicator.vue  ColorInput.vue  ConfirmationDialog.vue  DueIndicator.vue  HomeworkCard.vue  HomeworkDialog.vue  SubjectDialog.vue  SubjectIndicator.vue
frontend/src/locales/: en.json  fr.json
frontend/src/pages/: homeworks.vue  index.vue  schedule.vue  settings.vue  subjects.vue
frontend/src/pages/homeworks/: [id].vue  index.vue
frontend/src/plugins/: i18n.ts  index.ts  vuetify.ts
migrations/2025-02-04-130128_create_homeworks/: down.sql  up.sql
migrations/2025-02-07-130205_create_subjects/: down.sql  up.sql
migrations/2025-03-21-095917_create_files/: up.sql
src/: config.rs  db.rs  errors.rs  main.rs  models.rs  s3.rs  schema.rs  tests.rs  utils.rs
src/controllers/: homeworks.rs  ical.rs  mod.rs  subjects.rs
src/models/: homework.rs  mod.rs  subject.rs
