[package]
name = "homeworks"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
diesel_full_text_search = "2.2.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
rustls = { version = "0.23.25", optional = true }
rustls-platform-verifier = { version = "0.5.1", optional = true }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", optional = true }
tokio-postgres-rustls = { version = "0.13.0", optional = true }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }

[features]
default = ["postgres-tls"]
postgres-tls = ["dep:rustls", "dep:rustls-platform-verifier", "dep:tokio-postgres", "dep:tokio-postgres-rustls"]
