[package]
name = "homeworks"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.7", features = ["chrono"], default-features = false }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8", "async-connection-wrapper"] }
diesel_full_text_search = { version = "2.2.0", default-features = false }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.31"
rustls = "0.23.25"
rustls-platform-verifier = "0.5.1"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = "0.7.13"
tokio-postgres-rustls = "0.13.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
